--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800');
+
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900');
+
 html,
 body {
   padding: 0;
@@ -14,4 +18,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.myswiper{
+  width: 100%;
+  height: 100vh;
+}
+
+.swiperslide img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
