--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,10 +14,15 @@ body {
 }
 
 a {
+  position: relative;
   color: inherit;
   text-decoration: none;
 }
 
+li{
+  list-style: none;
+  
+}
 * {
   box-sizing: border-box;
 }
@@ -45,18 +50,28 @@ a {
   justify-content: space-around;
   transition: all 0.4s ease-in-out;
 }
+.header.active{
+  background-color: #1c335f;
+}
 .header_background {
-  background-color: #17304a;
-  color: #f4f4f4;
-  transition: all 0.4s ease-in;
+  width: 100vw;
+  height: 80px;
 
+  color: #fff;
+  display: flex;
+  z-index: 1000;
+  align-items: center;
+  justify-content: space-around;
+  transition: all 0.4s ease-in-out;
+  background-color: #17304a;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .styleLink {
   font-family: "Rubik", sans-serif;
   cursor: pointer;
   font-weight: 400;
-  padding: 0rem 1rem;
+  padding: 1rem 0;
+  
 }
 
 .features {
@@ -96,12 +111,24 @@ a {
 }
 
 .carrers {
+  position: relative;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: left;
   text-align: center;
   padding: 40px 7.5rem;
+  color: #17304a;
+}
+.carrers hr {
+  position: absolute;
+  left: 44%;
+  top: 120px;
+
+  border: none;
+  width: 150px;
+  background-color: #1e64e6;
+  height: 5px;
 }
 .carreras_tecnologico {
   font-size: 1.3em;
@@ -151,15 +178,18 @@ a {
   width: 350px;
   position: relative;
   text-align: left;
-  transition: 0.4s ease-in-out;
+  transition: all 0.4s ease-in;
   background-color: #fff;
   border-radius: 7px;
   color: #17304a;
 }
 .list_elm:hover {
   transform: scale(1.1);
-  transition: 0.4s ease-out;
+  color: #17304a;
+
+  transition: all 0.4s;
 }
+
 .list_elm .cont_img {
   width: 100%;
   height: 20em;
@@ -174,4 +204,58 @@ a {
 .list_info p {
   color: rgba(0, 0, 0, 0.5);
   font-weight: 600;
+}
+.convenios {
+  text-align: center;
+  width: 100%;
+}
+.list_convenios {
+  display: flex;
+
+  justify-content: center;
+  gap: 50px;
+}
+
+.convenio {
+  width: 200px;
+  height: 200px;
+  background: url("../public/Logo-Rodar-2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.menu{
+  
+  display: block;
+}
+.menu:hover  .submenu{
+  display:flex;
+  
+}
+.header__links{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:30px;
+}
+
+
+.submenu{
+  padding:10px;
+  width: 230px;
+  background-color: #17304a;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  
+  
+}
+.submenu__link{
+  cursor:pointer;
+  padding:10px 5px;
+  
+  font-family: "Rubik", sans-serif;
+  margin: 0 20px;
+}
+.submenu .submenu__link:hover{
+  background-color: #1e64e6;
 }
