--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@ li{
 }
 
 .header {
+  
   position: fixed;
   width: 100vw;
   height: 80px;
@@ -231,7 +232,7 @@ li{
   
   display: block;
 }
-.menu:hover  .submenu{
+.menu:hover  .submenu,.submenu__oferta{
   display:flex;
   
 }
@@ -244,41 +245,70 @@ li{
 
 
 .submenu{
-  padding:10px;
+  
   width: 230px;
   background-color: #fff;
-  position: absolute;
+  position: fixed;
   display: none;
   flex-direction: column;
-  left: 15px;
+  right: 415px;
+  color:#17202A;
   
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .submenu__link{
   cursor:pointer;
-
+  
   padding:10px 5px;
   
   font-family: "Rubik", sans-serif;
-  margin: 0 20px;
+  
 }
-.submenu .submenu__link:hover{
-  background-color: #00000050;
+.submenu__link_tp{
+  cursor:pointer;
+  color:#17202a;
+  padding:15px 5px;
+  
+  font-family: "Rubik", sans-serif;
+  
 }
-.menu_tp{
-  transition: 0.5s ease;
+
+.submenu__link:hover{
+  color:#17202a75;
+}
+.submenu__link_tp:hover{
+  color:#17202a75; 
 }
 .menu_tp:hover .submenu_tp{
   display: flex;
-  transition:all  0.5s ease;
 }
 .submenu_tp{
+  
+  padding:10px;
   width: 200px;
-  border:2px solid #000;
+  
   display: none;
   flex-direction: column;
-  position: absolute;
+  position: fixed;
   background-color: #fff;
-  top:0;
-  right:-230px;
+  top:150px;
+  right:215px;
   transition:all 0.5s ease-in;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.submenu__oferta{
+  
+  width: 230px;
+  background-color: #fff;
+  position: fixed;
+  display: none;
+  flex-direction: column;
+  right: 315px;
+  color:#17202A;
+  
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.menu:hover  .submenu__oferta{
+  display:flex;
+  
 }
