--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,13 +54,14 @@ li{
 }
 
 .header.active{
+  height: 54px;
   background-color: #fff;
   color: #17202A;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 .header_background {
   width: 100vw;
-  height: 80px;
+  
 
   color: #fff;
   display: flex;
@@ -351,4 +352,17 @@ li{
   right:-205px;
   
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+.submenu_tc{
+  padding:10px 20px;
+}
+.submenu_tc::after{
+  width: 100%;
+  height: 5px;
+  content: " ";
+  position: absolute;
+  background-color: #1e64e6;
+  left: 0;
+  top: 0;
 }
