--- a/styles/globals.css
+++ b/styles/globals.css
@@ -366,3 +366,52 @@ li{
   left: 0;
   top: 0;
 }
+
+.footer{
+  display: flex;
+  margin-top: 100px;
+  background-color: #17202A;
+  width: 100%;
+  padding:50px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color:#d8eaf1;
+}
+.footer span{
+  font-size: 20px;
+  font-weight: 500;
+}
+.direccion ul{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+
+.direccion ul li{
+  
+  list-style: none;
+}
+
+
+
+.redes{
+  margin-top:20px;
+  display: flex;
+  align-items: center;
+  gap:30px;
+}
+
+.facebook, .twitter, .youtube{
+  cursor: pointer;
+  font-size: 30px;
+}
+.facebook{
+  color:#29487D;
+}
+.twitter{
+  color:#00ACee;
+}
+.youtube{
+  color:#c4302B;
+}
